added new files

--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
-  "name": "mall",
-  "private": true,
-  "version": "0.0.0",
+  "name": "logisticske",
+  "private": false,
+  "version": "7.3.7",
+  "homepage": "https://FestusKoech.github.io/logisticske",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d ",
+    "test": "jest"
   },
   "dependencies": {
     "react": "^18.2.0",
